--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@ height="50">
 <div>
 <p>I LOVE WATCHING MOVIES ON NETFLIX</p>
 <p>MY FAV MOVIE IS ALIVE...</p>
-<p>It is an zombie based movie</p>
+<p>It is an zombie based movie.</p>
 </div>
 
 <div>
